<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/football_pitch_250"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <ViewFlipper
        android:id="@+id/vifMisEquipos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </ViewFlipper>

<!--     <LinearLayout -->
<!--         android:id="@+id/llMisEquipos" -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:orientation="vertical" > -->
<!--     </LinearLayout> -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:alpha="0.7"
        android:background="@drawable/barra54"
        android:gravity="bottom|center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/btnVolverME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/volver"
            android:src="@drawable/return64" />

        <ImageView
            android:id="@+id/btnPosPuntME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/posPunt"
            android:src="@drawable/posibles_puntos" />

        <ImageView
            android:id="@+id/btnRssME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/jornada"
            android:src="@drawable/jornada64" />

        <ImageView
            android:id="@+id/btnJornadaME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/resulDir"
            android:src="@drawable/resultados_dir60" />

        <ImageView
            android:id="@+id/btnAyudaME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/herramientas"
            android:src="@drawable/help64" />

        <ImageView
            android:id="@+id/btnInfoME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/informacion"
            android:src="@drawable/info64" />
    </LinearLayout>

</LinearLayout>