<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/football_pitch_250" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/eliminar_equipo"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/blue_f"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvNombreEquEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/eligeEquipoJug"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spiEquJugEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/black"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/btnEliminar"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:alpha="0.7"
        android:background="@drawable/barra54"
        android:gravity="top|center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/btnVolverEE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/volver"
            android:src="@drawable/return64" />

        <ImageView
            android:id="@+id/btnPosPuntEE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/posPunt"
            android:src="@drawable/posibles_puntos" />

        <ImageView
            android:id="@+id/btnRssEE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/jornada"
            android:src="@drawable/jornada64" />

        <ImageView
            android:id="@+id/btnJornadaEE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/resulDir"
            android:src="@drawable/resultados_dir60" />

        <ImageView
            android:id="@+id/btnAyudaEE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/herramientas"
            android:src="@drawable/help64" />

        <ImageView
            android:id="@+id/btnInfoEE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/informacion"
            android:src="@drawable/info64" />
    </LinearLayout>

</RelativeLayout>